--- a/app/src/main/res/layout/newsitem.xml
+++ b/app/src/main/res/layout/newsitem.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#304961">
+    android:background="#304961"
+    android:layout_marginVertical="10dp">
 
 
     <androidx.cardview.widget.CardView
