--- a/app/src/main/res/layout/activity_open_news.xml
+++ b/app/src/main/res/layout/activity_open_news.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OpenNews">
+    tools:context=".OpenNews"
+    android:background="@color/colorAccent"
+    >
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="visible"/>
 
 </RelativeLayout>
