--- a/app/src/main/res/layout/activity_open_news.xml
+++ b/app/src/main/res/layout/activity_open_news.xml
@@ -12,6 +12,6 @@
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 
 </RelativeLayout>
